# spirv-to-pica200

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.zig  build.zig.zon  compile_shaders.sh
src/: generate_headers.zig  main.cpp  main.zig  root.zig  spirv.json  translator.zig
src/pica200/: base.zig  builder.zig  mod.zig  program.zig  writer.zig
src/spirv/: generate_headers.zig  headers.zig  mod.zig  reader.zig  spirv.core.grammar.json
src/test_shaders/: arrays.v.pica  arrays.vert  control_flow.spv  control_flow.spvasm  control_flow.v.pica  control_flow.vert  functions.v.pica  functions.vert  math.spv  math.spvasm  math.v.pica  math.vert  matrices.v.pica  matrices.vert  simple.spv  simple.spvasm  simple.v.pica  simple.vert  std.v.pica  std.vert
